fix alignment of arrow and checkboxes
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@19594 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/wdk-CheckboxTree.css
+++ b/View/webapp/wdk/css/wdk-CheckboxTree.css
@@ -64,18 +64,8 @@
   width: 1.2em;
 }
 
-/*
-.wdk-CheckboxTreeToggle__collapsed {
-  left: 1.2em;
-}
-
-.wdk-CheckboxTreeToggle__expanded {
-  left: 2px;
-}
-*/
-
 .wdk-CheckboxTreeNodeContent {
-  margin-left: 1em;
+  margin-left: 1.3em;
 }
 
 .wdk-CheckboxTreeLinks {
